# ChangeLog for dev-java/maven-script
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2007; kiorky <kiorky@cryptelium.net> maven-script-2.0.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  29 May 2007; kiorky <kiorky@cryptelium.net> maven-script-2.0.ebuild:
  renaming EMAVEN_PROJECTS

  29 May 2007; kiorky <kiorky@cryptelium.net> maven-script-2.0.ebuild:
  Adding maven bootstrap flag

  25 May 2007; kiorky <kiorky@cryptelium.net> maven-script-2.0.ebuild,
  files/AntMojoComponentFactory.java.diff:
  fixing patches

  07 May 2007; kiorky <kiorky@cryptelium.net> +maven-script-2.0.6.ebuild,
  +files/AntMojoComponentFactory.java.diff, +metadata.xml:
  Added as a maven dependency, #177497
