@@ -1,5 +1,5 @@
 AUX AntMojoComponentFactory.java.diff 1118 RMD160 f00e64546aeabb87327171cead2d4cf1a9108827 SHA1 b1e24ee6f19bbc603441aa833e9502d1634c010a SHA256 78c531fbfe0a3076a1bcb7ea850f3a7633d400c47ce6f395f6b9a8bf6964b996
-DIST maven-script-2.0.tar.bz2 8608 RMD160 5e594ff74cf31072b1fe6a9ec24f139feca4df1a SHA1 6887f8b58e90444f875911c7fa0eff5e53d2595b SHA256 661a044591bafbfa688c1dd09255f6e02eceb4f89ead52480429f3e3149baadf
-EBUILD maven-script-2.0.ebuild 1044 RMD160 488ac6eb72e81bc38b47058f340e3b55252545f8 SHA1 43da90274b7fac2de4e4ca9343c1066073513792 SHA256 e2a062a40f37785d32077000cac49753ddc108e48cbe735885a0aed6c5304e35
-MISC ChangeLog 733 RMD160 6af16502c3e3a3a68fb33959f40f09e72f9dfc8d SHA1 d684ecbcdf4556fab3a1d17dd122fc7907d3a59f SHA256 66682e4a6cf1e25e144bc998cf6ae3bed309567e30a4016bbeff7d8541cd0577
+DIST maven-script-2.1_pre20070611.tar.bz2 10298 RMD160 cf51147ab4912a1a045e118936959d537aaaab91 SHA1 f5e4dd5f0d14fc0fba50b4c9f6fb7701cbb84e61 SHA256 fd41e10c38b4cae6a572f138b6fe17b9e94bed189ac05aa4097cb258f0760d4f
+EBUILD maven-script-2.1_pre20070611.ebuild 1193 RMD160 b412bd33222ab3344ed36cf1cbd0747a1540cf1a SHA1 0acc496cc24ffb9a9bdb13c24cf019e13b9724b6 SHA256 43fea73a8a3bdd369ccdccf93da01fb7691dae89dd4b2f7533ef069b2fdc0619
+MISC ChangeLog 863 RMD160 a9a03dbc7031a012549801a0086db7c3c99ee76c SHA1 1a1be44720a4284ea536ad35c4a01c4bfb928974 SHA256 72040a03488adcace80d501fcd0d92ba4ac9d6f030577a49492b7e1510d19834
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
