@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jun 2007; kiorky <kiorky@cryptelium.net> -maven-script-2.0.ebuild,
+  +maven-script-2.1_pre20070611.ebuild:
+  Maven 2.1 Bump
+
   02 Jun 2007; kiorky <kiorky@cryptelium.net> maven-script-2.0.ebuild:
   moving to JAVA_MAVEN_CLASSPATH
 
